update package json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-app",
+  "name": "https://ahmedali-dev.github.io/firstStoreUseReact/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
